# kindle2readwise

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SPECS.md  index.html  pyproject.toml  test_demo.py  test_parser.py
.github/workflows/: pages.yml
docs/: Gemfile  README.md  _config.yml  examples.md  index.md  installation.md  troubleshooting.md  usage.md
docs/.github/workflows/: pages.yml
kindle2readwise/: README.md  __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  logging_config.py  models.py
kindle2readwise/cli/: __init__.py  main.py  parsers.py
kindle2readwise/cli/commands/: __init__.py  config.py  devices.py  export.py  highlights.py  history.py  reset_db.py  version.py
kindle2readwise/cli/utils/: __init__.py  common.py  formatters.py
kindle2readwise/database/: __init__.py  dao.py  db_manager.py  models.py
kindle2readwise/parser/: __init__.py  models.py  parser.py
kindle2readwise/readwise/: __init__.py  client.py  models.py
kindle2readwise/utils/: credentials.py  device_detection.py
specs/: application_structure.md  cli.md  database.md  dependencies.md  kindle_clippings.md  logging.md  readwise_api.md
tests/: test_cli.py  test_cli_config.py  test_config.py  test_core.py  test_credentials.py  test_database.py  test_db_manager.py  test_device_detection.py  test_history.py  test_integration_reset_db.py  test_interactive_export.py  test_issue_3.py  test_logging_config.py  test_note_detection.py  test_parser.py  test_readwise.py  test_reset_db.py  test_utils.py
tests/fixtures/: clippings_sample.txt  clippings_with_notes.txt  edge_cases_clippings.txt  image_highlights_clippings.txt  issue_3_example.txt
